...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TabWidget>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@drawable/tab_text_selector">

                        <LinearLayout
                            android:id="@+id/addExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:descendantFocusability="beforeDescendants"
                            android:orientation="vertical"
                            android:weightSum="1">

...
                            <View
                                android:layout_width="fill_parent"
                                android:layout_height="1dip"
                                android:background="#000000" />

                            <Button
                                android:id="@+id/editButton"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/buttoneditmainstyle"
                                android:text="@string/edit" />

...

                            </FrameLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ManageExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:descendantFocusability="beforeDescendants"
                            android:orientation="vertical"
                            android:weightSum="1">

...
                            <View
                                android:layout_width="fill_parent"
                                android:layout_height="1dip"
                                android:background="#000000" />

                            <Button
                                android:id="@+id/reportButton"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/buttonreportstyle"
                                android:text="@string/report" />
...
                            <View
                                android:layout_width="fill_parent"
                                android:layout_height="1dip"
                                android:background="#000000" />

                            <Button
                                android:id="@+id/budgetButton"
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/budgetbuttonstyle"
...

                            </RelativeLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ChartExpenses"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
...
                                android:background="#000000" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:text="@string/pie_chart"
                                android:id="@+id/chartButton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
...
                                android:background="#000000" />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:text="@string/bar_chart"
                                android:id="@+id/barChartbutton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_marginTop="10dp"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:layout_width="wrap_content"
...

                            <Button
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/annual_chart"
                                android:id="@+id/annualChartButton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp" />

                            <TextView
                                android:layout_width="wrap_content"
...

                            <Button
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/savings_chart"
                                android:id="@+id/annualSavingsButton"
                                android:background="@drawable/buttonschartstyle"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp" />

                        </LinearLayout>

...
