<resources>
    <string name="app_name">ManageXPence</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="removeAds">Remove Ads</string>
    <string name="descriptions">House Rent,Shopping,SuperMarket,Travel,Mortgage,Council Tax,House Bills,Entertainment</string>

    <string-array name="descriptions">
        <item>House Rent</item>
        <item>Shopping</item>
...
        you had entered on that month. If you have not entered an income in a month then the current month income is considered.
        </string>
    <string name="title_activity_login">Sign in</string>

    <string name="year">Year:</string>
    <string name="textview">TextView</string>
    <string name="year_spending_text">How much do I spend on a year for each expense?</string>
    <string name="set_income_circle">Set Income Circle</string>
    <string name="set_a_budget_warning">Set a Budget Warning</string>
    <string name="_0">0</string>
    <string name="warning_set_on">Warning set on:</string>
    <string name="your_current_budget_warning_is">Your current Budget Warning is:</string>
    <string name="select_an_expense_and_year">Select an Expense and Year</string>
...
    <string name="enter_description"><font size="14">Enter description</font></string>
    <string name="enter_amount"><font size="14">Enter amount</font></string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_an_expense">Add an Expense:</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_description">Description</string>
    <string name="add">Add</string>
    <string name="select_date">Select Date</string>
    <string name="end_date">End Date</string>
...
    <string name="balance">Balance:</string>
    <string name="edit_an_expense">Edit an expense:</string>
    <string name="add_expenses_using_date_range">Add expenses using date range:</string>
    <string name="sum_expenses">Sum expenses</string>
    <string name="enter_date_range">Enter date range</string>
    <string name="show_a_report_of_your_expenses">Show a report of your Expenses:</string>
    <string name="report">Report</string>
    <string name="budget_warnings">Budget Warnings:</string>
    <string name="budget_control">Budget Control</string>
    <string name="backup">BackUp:</string>
    <string name="export">Export</string>
    <string name="importexpenses">Import</string>
    <string name="show_a_pie_chart_with_your_expenses">Show a Pie Chart with your Expenses:</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="show_a_barchart_with_your_expenses">Show a BarChart with your Expenses:</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="show_an_annual_chart_with_your_expenses">Show an Annual Chart with your Expenses:</string>
    <string name="annual_chart">Annual Chart</string>
    <string name="show_a_savings_chart">Show a Savings Chart:</string>
    <string name="savings_chart">Savings Chart</string>
    <string name="export_to_dropbox">Export to DROPBOX</string>
    <string name="export_txt">Export TXT</string>
    <string name="export_pdf">Export PDF</string>
    <string name="add_or_remove_a_description">ADD or REMOVE a Description</string>
    <string name="enter_text_here">Enter text here..</string>
    <string name="salary_day">Salary Day</string>
...
