<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsView">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="-20dp"
        android:layout_marginLeft="-32dp"
        android:layout_marginStart="-32dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/ImageView" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</RelativeLayout>